# awkwardhdf5

./: .gitignore  CMakeLists.txt
cli/: create_compound_vlen.cpp  create_vlen.cpp  readhdf.cpp
include/: Object.h
src/: Dataset.cpp  File.cpp  Group.cpp  Location.cpp  Object.cpp  awkwardhdf5.cpp
tests/: test_file.py
